--- a/2017-S1/FIT5148.md
+++ b/2017-S1/FIT5148.md
@@ -15,3 +15,19 @@ Week | Lecture
 ---
 
 ### Week 1
+> The reason of adopting distributed computing
+> 1. scalability
+> 2. transparency issue
+
+### Week 2
+> * divide tables in **Horizontal fragmentation** alternative
+>> say to divide table Project, we could have two Project tables, one is used to store projects which budget is less than $2000, and the other one is used to store projects whih budget is greater and equal to $2000.
+
+> * divide tables in **vertical framentation alternative**
+>> say to divide table Project, we could have two Project tables, one is used to store projects with project number and project budget, and the other one is used to store projects with project number, project name, as well as project allocation.
+>> * **Note** in Vertica alternative, there is a common column in two tables, such as projet number.
+
+### Week 3
+> **caluculations**  very very very important for exams
+
+ 
