set size of img

--- a/BibleStudy/2018/06/28.md
+++ b/BibleStudy/2018/06/28.md
@@ -4,4 +4,4 @@ Remember those who are taking the lead among you, who have spoken the word of Go
 
 要记住那些领导你们的人，就是速来向你们传讲上帝话语的人。你们要仔细留意他们处世做人的成果，效法他们的信心。
 
-![Debbie Morgon](Debbie.jpeg)
+<img src="Debbie.jpeg" width="150">
