--- a/BibleStudy/2018/06/28.md
+++ b/BibleStudy/2018/06/28.md
@@ -1,11 +1,12 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </link>
+
 *_Hebrews 13:7_*
 ===
-<p id="eng">
+<p>
 Remember those who are taking the lead among you, who have spoken the word of God to you, and as you contemplate how their conduct turns out, imitate their faith.
 </p>
-<p style="color:grey;">
+<p id="trans">
 要记住那些领导你们的人，就是速来向你们传讲上帝话语的人。你们要仔细留意他们处世做人的成果，效法他们的信心。
 </p>
 <p align="center">
