--- a/BibleStudy/2018/06/28.md
+++ b/BibleStudy/2018/06/28.md
@@ -3,7 +3,7 @@
 
 *_Hebrews 13:7_*
 ===
-<p>
+<p style="color:red;">
 Remember those who are taking the lead among you, who have spoken the word of God to you, and as you contemplate how their conduct turns out, imitate their faith.
 </p>
 <p id="trans">
